# T07-DES_Instrument-Cluster

./: Jetcar.py  Jetcar_v2.py  README.md
25/: CAN-interface--speed-meter-subject.md  CAN-interface--speed-meter.md
26/: Cross-compiler-description.md  Cross-compiler-workflowmd
28/: 28-subject.md
ADR/: 001-ADR'FUNDAMENTALS.md  001-ADR-HARDWARE.md  003-ADR-COMMUNICATION.md  003-ADR-FUNDAMENTALS.md
MainCarServer/: run.sh
VSS/MainCar/: CMakeLists.txt  run.sh
VSS/MainCar/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VSS/MainCar/cpp/modules/vehicle_speed/: CMakeLists.txt  Vehicle_speedConfig.cmake.in
VSS/MainCar/cpp/modules/vehicle_speed/implementation/: CMakeLists.txt  vehiclespeed.cpp  vehiclespeed.h  vehiclespeed.test.cpp
VSS/MainCar/cpp/scripts/: test_cmake.sh
VSS/MainCar/includes/: ACar.hpp  CANBus.hpp  ISensor.hpp  Logger.hpp  Part.hpp  SomeCar.hpp  SpeedSensor.hpp  partAll.hpp
VSS/MainCar/sources/: CANBus.cpp  ConfigController.cpp  Controller.cpp  Logger.cpp  Part.cpp  SomeCar.cpp  SpeedSensor.cpp  main.cpp  partAll.cpp
arduino/SpeedSensor/Bus-Shield/Sender/: Sender.ino
arduino/SpeedSensor/Small-board/CANReceiver/: CANReceiver.ino
arduino/SpeedSensor/Small-board/CANSender/: CANSender.ino
arduino/SpeedSensor/Small-board/CANSender-clicks/: CANSender-clicks.ino
c/examples/: test.h
code/: myPWM.c
code-python/: speed-sensor.py
docs/: resources.md
oled223/: Makefile  oled
oled223/docs/: service_setup.md
oled223/examples/: main.c
oled223/includes/Config/: DEV_Config.h
oled223/includes/OLED/: ssd1305.h
oled223/lib/Config/: DEV_Config.c
oled223/lib/OLED/: ssd1305.h
oled223/sources/: main.c  speed.c
oled_thread/: gpio_pulse_counter_threaded  gpio_pulse_counter_threaded.c
speed/: Makefile  main  speed
speed-meter/includes/OLED/: ssd1305.h
speed-meter/sources/: main.c  test.h
speed/includes/OLED/: ssd1305.c
speedMeter/: Makefile  kmStart.sh  kmStop.sh  main.c  oled
speedMeter/includes/: display.h  display_ssd1305.h  speedMeter.h
speedMeter/includes/OLED/: ssd1305.c  ssd1305.h
speedMeter/old/: speed.h
speedMeter/sources/: 100_main.c  200_signals.c  300_display_.c  300_display_ssd1305.c  310_display_speed.c  400_pulses.c
